--- a/css/main.css
+++ b/css/main.css
@@ -5007,13 +5007,6 @@ Events Area Style
 
 /* 
  */
-.transition-3 {
-  -webkit-transition: all 0.3s ease-out 0s;
-  -moz-transition: all 0.3s ease-out 0s;
-  -ms-transition: all 0.3s ease-out 0s;
-  -o-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-}
 
 .teacher__courses .section__title {
   font-size: 30px;
@@ -5039,6 +5032,7 @@ Events Area Style
   -ms-box-shadow: 0px 30px 30px rgba(3, 18, 32, 0.08);
   -o-box-shadow: 0px 30px 30px rgba(3, 18, 32, 0.08);
   box-shadow: 0px 30px 30px rgba(3, 18, 32, 0.08);
+ transform: translateY(-10px)!important;
 }
 
 .course__item-3:hover .course__icon-3 span::after {
@@ -5067,7 +5061,7 @@ Events Area Style
 }
 
 .course__icon-3 span {
- width: 60px;
+  width: 60px;
   height: 60px;
   background: #f5f5f5;
   border-radius: 50%;
@@ -5082,7 +5076,7 @@ Events Area Style
 }
 
 .course__icon-3 span::after {
-content: "";
+  content: "";
   position: absolute;
   inset: 0;
   background: #9a0019;
@@ -5092,14 +5086,18 @@ content: "";
   transition: transform 0.4s ease;
   z-index: -1;
 }
+
 .course__item-3:hover .course__icon-3 span::after {
   transform: scale(1);
-  
+
 }
+
 .course__item-3:hover .course__icon-3 svg path {
-stroke: #ffffff!important; /* maroon stroke on white bg */
-  fill: #9a0019;  
+  stroke: #ffffff !important;
+  /* maroon stroke on white bg */
+  fill: #9a0019;
 }
+
 .course__content-2 {
   padding: 20px 15px 15px;
 }
@@ -5117,4 +5115,17 @@ stroke: #ffffff!important; /* maroon stroke on white bg */
   outline: none;
   border: none;
   text-decoration: none;
+}
+
+
+@media (max-width:760px) {
+  .header__info ul {
+    padding-left: 0px;
+  }
+
+  .header__info ul li {
+    list-style: none !important;
+    display: inline-block;
+    margin-right: 10px;
+  }
 }
