--- a/css/main.css
+++ b/css/main.css
@@ -4218,7 +4218,7 @@ Events Area Style
 @media (max-width:780px) {
   .main-banner {
     position: relative;
-    margin-top: 100px;
+    margin-top: 100px!important;
   }
 }
 
