--- a/css/main.css
+++ b/css/main.css
@@ -4177,9 +4177,9 @@ Events Area Style
 .header__info ul li a {
   text-decoration: none !important;
   color: #ffffff;
-  font-size: 12px!important;
-      border-right: 1px solid white;
-    padding-right: 10px;
+  font-size: 12px !important;
+  border-right: 1px solid white;
+  padding-right: 10px;
 }
 
 .header__info ul li a:hover {
@@ -4207,7 +4207,7 @@ Events Area Style
     margin 0.35s ease;
 }
 
-.centernavbar p{
+.centernavbar p {
   font-size: 14px;
 }
 
@@ -5033,7 +5033,7 @@ Events Area Style
   -ms-box-shadow: 0px 30px 30px rgba(3, 18, 32, 0.08);
   -o-box-shadow: 0px 30px 30px rgba(3, 18, 32, 0.08);
   box-shadow: 0px 30px 30px rgba(3, 18, 32, 0.08);
- transform: translateY(-10px)!important;
+  transform: translateY(-10px) !important;
 }
 
 .course__item-3:hover .course__icon-3 span::after {
@@ -5117,32 +5117,37 @@ Events Area Style
   border: none;
   text-decoration: none;
 }
+
 @media (max-width:667px) {
   .main-banner {
     position: relative;
-    margin-top: 120px!important;
+    margin-top: 120px !important;
   }
-      .header__info ul li {
-        list-style: none !important;
-        display: inline-block;
-        margin-right: 7px;
-    }
-    .header__info ul li a {
+
+  .header__info ul li {
+    list-style: none !important;
+    display: inline-block;
+    margin-right: 7px !important;
+  }
+
+  .header__info ul li a {
     text-decoration: none !important;
     color: #ffffff;
     font-size: 12px !important;
     border-right: 1px solid white;
-    padding-right: 5px;
+    padding-right: 5px!important;
+  }
 }
-}
+
 @media (max-width:780px) {
   .main-banner {
     position: relative;
-    margin-top: 100px!important;
+    margin-top: 100px !important;
   }
+
   .header__info ul {
     margin: 2px 0px;
-}
+  }
 }
 
 @media (max-width:760px) {
