--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ body {
   margin: 0;
   /* 1 */
   line-height: inherit;
- font-family: "Segoe UI", Arial, sans-serif;
+  font-family: "Segoe UI", Arial, sans-serif;
   /* 2 */
 }
 
@@ -559,7 +559,11 @@ video {
 
 :root {
   /* Primary Colors - Confident Academic Authority */
+  --primary: #219e9a;
   --color-primary: #AD1F37;
+  --tp-common-black: #031220;
+  --tp-common-white: #ffffff;
+  --tp-theme-1: #a00f0f;
   /* red-700 */
   --color-primary-50: #FDF2F4;
   /* red-50 */
@@ -2672,7 +2676,7 @@ Page Banner Area Style
 .pages-banner-area {
   z-index: 1;
   position: relative;
-  padding-top: 180px;
+  padding-top: 250px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -2681,7 +2685,7 @@ Page Banner Area Style
 
 @media (max-width:780px) {
   .pages-banner-area {
-    padding-top: 100px !important;
+    padding-top: 180px !important;
   }
 }
 
@@ -3664,8 +3668,9 @@ Events Area Style
 .single-events-card.pages-style:hover {
   background-color: #ad1f37;
 }
+
 .single-events-card.pages-style:hover .content .date {
-    color: white;
+  color: white;
 }
 
 .from-secondary-900\/80 {
@@ -4216,7 +4221,7 @@ Events Area Style
 
 .centernavbar p {
   font-size: 14px;
-  font-weight: bold!important;
+  font-weight: bold !important;
   font-family: "Segoe UI", Arial, sans-serif;
   color: #333;
 }
@@ -4555,7 +4560,7 @@ Events Area Style
 .navbar_list ul.submenu {
   position: absolute;
   top: calc(100% + 14px);
-  left: 0;
+  left: -25px;
   width: max-content;
 
   background: rgba(255, 255, 255, 1);
@@ -4602,7 +4607,7 @@ Events Area Style
 .navbar_list li.has-child:hover>ul.submenu {
   opacity: 1;
   visibility: visible;
-  transform: translateY(0) scale(1);
+  transform: translateY(0) scale(0.9);
   border-top: 2px solid #9a0000;
 }
 
@@ -5064,9 +5069,15 @@ Events Area Style
   padding: 20px 15px 15px;
 }
 
+.course__bottom-2 {
+  padding-top: 6px;
+  border-top: 1px solid rgba(3, 18, 32, 0.07);
+}
+
 .course__title-2 {
   font-size: 20px;
   margin-bottom: 17px;
+  margin-top: 10px;
   font-weight: 600;
   line-height: 28px;
   color: white;
@@ -5196,8 +5207,699 @@ a[href^="tel"] {
   text-decoration: none !important;
   color: inherit !important;
 }
+
 @supports (-webkit-touch-callout: none) {
   p {
     -webkit-text-decoration: none;
   }
+}
+
+.programAbout {
+  max-width: 100%;
+  font-size: 60px;
+}
+
+/* *******************************  */
+/* program details.css */
+.accreditations_list {
+  position: relative;
+}
+
+.accreditations_list img {
+  border: solid 2px #fca716;
+  border-radius: 20px;
+}
+
+.Accreditations {
+  padding-bottom: 50px;
+  padding-top: 30px;
+
+}
+
+.card {
+  border: none;
+  border-radius: 10px;
+  transition: all 0.5s;
+  background-color: var(--primary);
+}
+
+.card-content {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+  transition: all 0.5s;
+}
+
+.card-accent {
+  color: #001b38;
+  position: relative;
+  border: 1px solid var(--accent-color-5);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 11;
+  overflow: hidden;
+  padding: 30px;
+  height: 100%;
+}
+
+.card-accent .card-content {
+  padding: 10px 15px 10px;
+}
+
+.card-content ul li {
+  color: #001b38 !important;
+}
+
+.card-accent p {
+  color: var(--text-color-2);
+}
+
+.card-accent:hover {
+  color: var(--primary);
+}
+
+.card-accent:hover p {
+  color: var(--primary);
+}
+
+.card-accent svg {
+  color: var(--accent-color);
+}
+
+.card-accent:hover svg {
+  color: var(--primary);
+}
+
+.card-accent span {
+  color: var(--accent-color-4);
+}
+
+.card-accent:hover span {
+  color: var(--primary);
+}
+
+.card-accent .grey-hover {
+  color: var(--accent-color-4);
+}
+
+.card-accent:hover .grey-hover {
+  color: var(--primary);
+}
+
+.card-accent .btn-accent {
+  background: var(--background-color);
+  backdrop-filter: blur(17.5px);
+  border-top: 1px solid var(--text-color);
+  border-radius: 20px;
+}
+
+.card-accent:hover .btn-accent {
+  background: var(--text-color);
+  border-top: 1px solid transparent;
+}
+
+.card-accent .social-item {
+  height: 24px;
+  width: 24px;
+  font-size: 12px;
+  color: var(--primary);
+  background: linear-gradient(78.12deg, #A9F8B5 0.32%, #DFF494 99.52%);
+}
+
+.card-accent:hover .social-item {
+  color: var(--accent-color);
+  background: var(--primary);
+}
+
+.card-accent .btn-accent span,
+.card-accent h6 {
+  color: var(--text-color);
+}
+
+.card-accent:hover .btn-accent span,
+.card-accent:hover h6 {
+  color: var(--primary);
+}
+
+.card-accent h5 {
+  background: linear-gradient(78.12deg, #A9F8B5 0.32%, #DFF494 99.52%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.card-accent ul li {
+  font-size: 20px;
+  padding: 2px 0px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.card-accent:hover h5 {
+  background: var(--primary);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.bg {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  right: 2px;
+  bottom: 2px;
+  z-index: 2;
+  background: #fecc00;
+  backdrop-filter: blur(30px);
+  border-radius: 20px;
+  overflow: hidden;
+  outline: transparent;
+  transition: all 0.5s;
+}
+
+.bg-2 {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  right: 2px;
+  bottom: 2px;
+  z-index: 2;
+  background: linear-gradient(329deg, #110805, #791a00 90%);
+  backdrop-filter: blur(30px);
+  border-radius: 20px;
+  overflow: hidden;
+  outline: transparent;
+  transition: all 0.5s;
+}
+
+.bg:hover {
+  background: #fecc00;
+}
+
+.card-accent:hover .bg {
+  background: #fecc00;
+}
+
+.blob.price {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  bottom: 50%;
+  right: 50%;
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  background: var(--accent-color-3);
+  opacity: 1;
+  filter: blur(12px);
+  animation: blob-bounce 8s infinite ease;
+}
+
+.blob {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  bottom: 50%;
+  right: 50%;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  background: linear-gradient(329deg, #001b38, #001b38 90%);
+  opacity: 1;
+  filter: blur(12px);
+  animation: blob-bounce 8s infinite ease;
+}
+
+@keyframes blob-bounce {
+  0% {
+    transform: translate(-100%, -100%) translate3d(0, 0, 0);
+  }
+
+  25% {
+    transform: translate(-100%, -100%) translate3d(100%, 0, 0);
+  }
+
+  50% {
+    transform: translate(-100%, -100%) translate3d(100%, 100%, 0);
+  }
+
+  75% {
+    transform: translate(-100%, -100%) translate3d(0, 100%, 0);
+  }
+
+  100% {
+    transform: translate(-100%, -100%) translate3d(0, 0, 0);
+  }
+}
+
+.card-content-2 h3 a {
+  color: white;
+  font-size: 28px;
+}
+
+.card-content-2 p {
+  color: white;
+  font-size: 24px;
+}
+
+.card-content-2 p:hover {
+  color: white !important;
+}
+
+.card-content-2 a {
+  color: white;
+  font-size: 24px;
+}
+
+.gradient-one {
+  background: linear-gradient(329deg, #9a0019, #000000 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.course__tab-2 .nav-tabs {
+  border: none;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.course__tab-2 .nav-tabs .nav-item {
+  width: 20%;
+}
+
+.course__tab-2 .nav-tabs .nav-item:not(:last-child) .nav-link {
+  border-right: 1px solid #d2d3dc;
+}
+
+.course__tab-2 .nav-tabs .nav-item:not(:last-child) .nav-link.active {
+  border-color: var(--tp-theme-1);
+}
+
+.course__tab-2 .nav-tabs .nav-item .nav-link {
+  background: #edeef3;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--tp-common-black);
+  width: 100%;
+  height: 54px;
+  line-height: 52px;
+  padding: 0;
+  text-align: center;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -o-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0;
+}
+
+.course__tab-2 .nav-tabs .nav-item .nav-link i {
+  padding-right: 5px;
+}
+
+.course__tab-2 .nav-tabs .nav-item .nav-link.active {
+  background: var(--tp-theme-1);
+  color: var(--tp-common-white);
+}
+
+.course__tab-2 .nav-tabs .nav-item .nav-link.active svg path {
+  fill: var(--tp-common-white);
+}
+
+@media (max-width: 575px) {
+  .course__tab-2 .nav-tabs .nav-item .nav-link i {
+    display: none;
+  }
+}
+
+.course__tab-2 .nav-tabs .nav-item .nav-link svg {
+  width: 14px;
+  height: 14px;
+}
+
+.course__tab-2 .nav-tabs .nav-item .nav-link svg path {
+  fill: var(--tp-common-black);
+}
+
+.course__description h3 {
+  font-size: 26px;
+  margin-bottom: 15px;
+}
+
+.course__description p {
+  font-size: 16px;
+  color: #5F6160;
+  line-height: 1.7;
+}
+
+.course__description-list h4 {
+  font-size: 26px;
+  margin-bottom: 15px;
+}
+
+.course__description-list ul li {
+  font-size: 18px;
+  color: #5F6160;
+  margin-bottom: 7px;
+  list-style: none;
+}
+
+.course__description-list ul li i {
+  font-size: 16px;
+  color: var(--tp-common-black);
+  padding-right: 5px;
+}
+
+.course__curriculum .accordion-item {
+  padding: 0;
+  border-color: #edeef2;
+}
+
+.course__curriculum .accordion-item .accordion-button {
+  outline: none;
+  border: 0;
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  -o-border-radius: 4px 4px 0 0;
+  -ms-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+  background: #f3f4f8;
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--tp-common-black);
+  padding-top: 18px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.course__curriculum .accordion-item .accordion-button.collapsed {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.course__curriculum .accordion-item .accordion-button:focus {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
+}
+
+.course__curriculum .accordion-item .accordion-body {
+  padding: 0;
+}
+
+.course__curriculum-content {
+  padding: 13px 30px;
+  border-bottom: 1px solid rgba(3, 18, 32, 0.2);
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+}
+
+.course__curriculum-content:last-child {
+  border: none;
+}
+
+.course__curriculum-content:hover {
+  background: #f6f7fb;
+}
+
+.course__curriculum-info svg {
+  width: 16px;
+  height: 16px;
+  margin-right: 7px;
+}
+
+.course__curriculum-info svg .st0 {
+  fill: none;
+  stroke: #6D6E75;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+.course__curriculum-info h3 {
+  display: inline-block;
+  font-size: 16px;
+  color: #5F6160;
+  font-weight: 400;
+  margin-bottom: 0;
+}
+
+.course__curriculum-info {
+  display: flex;
+}
+
+.course__curriculum-info h3 span {
+  color: Black;
+  font-weight: 500;
+}
+
+/* * scroller */
+*/ .table-responsive {
+  overflow-x: auto;
+  max-height: 400px;
+  /* or whatever fits best */
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scroll-behavior: smooth;
+}
+
+.table-responsive table {
+  /* min-width: 600px; */
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table-responsive th,
+.table-responsive td {
+  padding: 12px;
+  border: 1px solid #75757533;
+  /* border-left: none; */
+  border-top: none;
+  text-align: center;
+}
+
+/* Scroll styling */
+.table-responsive2 {
+  overflow-x: auto;
+  border-radius: 10px;
+}
+
+.table-responsive2::-webkit-scrollbar {
+  height: 8px;
+}
+
+.table-responsive2::-webkit-scrollbar-thumb {
+  background: gray;
+  border-radius: 10px;
+}
+
+.table-responsive2::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+thead {
+  background: linear-gradient(90deg, #9a0019, #c50000);
+  color: #fff;
+  text-transform: uppercase;
+}
+
+tbody {
+  background-color: #fff;
+  color: #000;
+}
+
+.course__item {
+  border-radius: 10px;
+  padding: 25px 25px;
+  -webkit-box-shadow: 0px 1px 2px rgba(26, 31, 35, 0.07);
+  -moz-box-shadow: 0px 1px 2px rgba(26, 31, 35, 0.07);
+  -ms-box-shadow: 0px 1px 2px rgba(26, 31, 35, 0.07);
+  -o-box-shadow: 0px 1px 2px rgba(26, 31, 35, 0.07);
+  box-shadow: 0px 1px 2px rgba(26, 31, 35, 0.07);
+  height: -webkit-fill-available;
+}
+
+.course__item:hover {
+  -webkit-box-shadow: 0px 30px 50px -14px rgba(26, 31, 35, 0.07);
+  -moz-box-shadow: 0px 30px 50px -14px rgba(26, 31, 35, 0.07);
+  -ms-box-shadow: 0px 30px 50px -14px rgba(26, 31, 35, 0.07);
+  -o-box-shadow: 0px 30px 50px -14px rgba(26, 31, 35, 0.07);
+  box-shadow: 0px 30px 50px -14px rgba(26, 31, 35, 0.07);
+}
+
+.course__item:hover .course__thumb img {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.course__item-2 {
+  -webkit-box-shadow: 0px 1px 2px rgba(12, 20, 15, 0.1);
+  -moz-box-shadow: 0px 1px 2px rgba(12, 20, 15, 0.1);
+  -ms-box-shadow: 0px 1px 2px rgba(12, 20, 15, 0.1);
+  -o-box-shadow: 0px 1px 2px rgba(12, 20, 15, 0.1);
+  box-shadow: 0px 1px 2px rgba(12, 20, 15, 0.1);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
+}
+
+.course__item-2:hover {
+  -webkit-box-shadow: 0px 30px 30px rgba(12, 20, 15, 0.1);
+  -moz-box-shadow: 0px 30px 30px rgba(12, 20, 15, 0.1);
+  -ms-box-shadow: 0px 30px 30px rgba(12, 20, 15, 0.1);
+  -o-box-shadow: 0px 30px 30px rgba(12, 20, 15, 0.1);
+  box-shadow: 0px 30px 30px rgba(12, 20, 15, 0.1);
+}
+
+.section__title-wrapper p {
+  font-size: 16px;
+}
+
+.course__item-list .course__tag-2 {
+  margin-bottom: 10px;
+}
+
+.course__tag-2 a {
+  display: inline-block;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 14px;
+  font-size: 13px;
+  font-weight: 500;
+  color: #3C66ED;
+  background-color: rgba(60, 101, 237, 0.164);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.course__tag-2.pink-bg a {
+  color: #FC4C56;
+  background-color: rgba(252, 76, 86, 0.08);
+}
+
+.course__tag-2.violet-bg a {
+  color: #3C66ED;
+  background-color: rgb(98, 81, 251);
+}
+
+
+/* important */
+.course__slider.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.course__instructor h3 {
+  font-size: 40px;
+}
+
+.ranking-box-shadow img {
+  width: 100vw;
+}
+
+.course__tutor-2 {
+  filter: contrast(0.5);
+}
+
+tbody tr:hover {
+  background-color: #fdedee;
+}
+
+.courseHead {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.courseHead img {
+  margin-bottom: 8px;
+}
+
+/* media query for programms */
+@media (max-width: 1025px) and (max-height: 600px) {
+  .pages-title {
+    margin-top: 30px !important;
+  }
+
+  .pages-banner-area {
+    padding-top: 260px;
+  }
+
+  .card-accent {
+    padding: 30px 0px;
+  }
+}
+
+@media (max-width: 500px) {
+  .course__tab-2 .nav-tabs .nav-item:not(:last-child) .nav-link {
+    border-bottom: 2px solid #d2d3dc;
+}
+  .pages-title {
+    margin-top: 90px;
+  }
+
+  .pages-title h2 {
+    font-size: 45px;
+    margin-bottom: 18px;
+  }
+
+  .programAbout {
+    font-size: 45px;
+  }
+
+  .course__tab-2 .nav-tabs .nav-item {
+    width: 100%;
+  }
+
+  .card-accent {
+    padding: 10px;
+  }
+
+  .Accreditations p {
+    text-align: justify !important;
+  }
+
+  .course__area p {
+    text-align: justify !important;
+  }
+  .course__instructor h3 {
+    font-size: 30px;
+}
+.table-responsive th{
+    font-size: 12px!important;
+}
+.table-responsive td{
+    font-size: 14px!important;
+}
+.course__related .section__title{
+  font-size: 14px;
+}
 }
