--- a/css/main.css
+++ b/css/main.css
@@ -5900,6 +5900,9 @@ tbody tr:hover {
     font-size: 14px!important;
 }
 .course__related .section__title{
-  font-size: 14px;
+  font-size: 18px;
+}
+.course__content-2 {
+  padding: 0px 15px 15px;
 }
 }
